<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.SplashActivity">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="-50dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"/>


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/stitle"
            android:fontFamily="@font/brandon_black"
            android:maxLines="2"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#000"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/tvSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Splash_subtitle"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:textStyle="italic"
            android:textColor="@color/eight"
            android:visibility="gone"
            tools:visibility="visible"
            android:textSize="16sp"/>


    </LinearLayout>
    <ProgressBar
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        tools:visibility="visible"
        android:id="@+id/pbLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</RelativeLayout>